[package]
name = "clean_atp_gobbled_urls"
version = "0.1.1"
authors = ["Dr. Christian Geuer-Pollmann <chgeuer@microsoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# reqwest = { version = "0.11.17", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.8.1"
url = "2.3.1"
clipboard-win = "4.4.2"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
glob = "0.3.1"
ctrlc = "3.2"
log = "0.4"
env_logger = "0.9"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
